feat: add STORELOCATOR.rar and FINALYEAR_PROJECTS/Final-Year_Graduation.pptx to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ MegaBlog/.env
 # fun with tailwind
 REALTIME_TRACKER/public/!CRASS ROOTS OFL-FontZillion.zip
 MegaBlog.zip
+STORELOCATOR.rar
+FINALYEAR_PROJECTS/Final-Year_Graduation.pptx
